# dowser

./: .gitignore  Cargo.toml  README.md  devenv.nix
dowser_rf/: Cargo.toml  snap.csv
dowser_rf/src/: antenna.rs  consts.rs  dipole_util.rs  feed_line.rs  lib.rs  propagation.rs  util.rs
dowser_rf/src/antennas/: dipole.rs  mod.rs
dowser_rf/src/fdtd/: mod.rs
dowser_rf/src/feed_lines/: coax_line.rs  mod.rs
dowser_rf/src/mom/: mod.rs
dowser_rf/src/trx_line/: coax_line.rs  mod.rs
src/: dipole_util.rs  main.rs  propagation.rs  trx_line.rs  util.rs
src/trx_line/: coax_line.rs  mod.rs
