[package]
name = "dowser"
version = "0.1.0"
edition = "2021"


[dependencies]
num-complex = "0.4.6"
spec_math = "0.1.6"
# bevy = "0.15.0"


# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
